<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ventana_accesso_cuenta">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="341dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingresa_tu_nombre"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="152dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ingresa_tu_mail"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="243dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingreso_de_usuario"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="85dp" />
</androidx.constraintlayout.widget.ConstraintLayout>