<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ventana_registro_cuenta">

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="269dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/ingresa_tu_nombre_de_usuario"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="275dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/ingresa_tu_mail"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="24dp"
        android:entries="@array/EDAD"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="577dp" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/re_ingresa_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.353"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="112dp"
        android:layout_height="76dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4">

        <RadioButton
            android:id="@+id/radio_dos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femenino" />

        <RadioButton
            android:id="@+id/radio_uno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>